@@ -158,7 +158,7 @@ void Mob::CalculateNewFearpoint()
 
 		Map::Vertex CurrentPosition(GetX(), GetY(), GetZ());
 
-		std::list<int> Route = zone->pathing->FindRoute(CurrentPosition, Loc);
+		std::vector<int> Route = zone->pathing->FindRoute(CurrentPosition, Loc);
 
 		if(Route.size() > 0)
 		{
